objects/ASI_CRM_SpecialPromotionTypeSetting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Add_RBA_As_Final_Approver_V0_0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add RBA as Final Approver (V0.0)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bypass_Contract_Upload_Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Contract Upload Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Count_Cover_Outlet_as_CO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count Cover Outlet as CO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_FY_Promotion_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New FY Promotion Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Override_BC_Rate__c</fullName>
        <label>Override BC Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type_Chinese_Name__c</fullName>
        <label>Promotion Type Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type_Key__c</fullName>
        <label>Promotion Type (Key)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRT - Contract</fullName>
                </value>
                <value>
                    <fullName>New Contract ON</fullName>
                </value>
                <value>
                    <fullName>New Contract OFF</fullName>
                </value>
                <value>
                    <fullName>RTD ON</fullName>
                </value>
                <value>
                    <fullName>RTD OFF</fullName>
                </value>
                <value>
                    <fullName>New Contract E-Commerce</fullName>
                </value>
                <value>
                    <fullName>NCO KTV</fullName>
                </value>
                <value>
                    <fullName>NCO RTV</fullName>
                </value>
                <value>
                    <fullName>NCO F-KTV</fullName>
                </value>
                <value>
                    <fullName>NCO Bar</fullName>
                </value>
                <value>
                    <fullName>NCO Chinese Restaurant</fullName>
                </value>
                <value>
                    <fullName>NCO Hotel</fullName>
                </value>
                <value>
                    <fullName>NCO Inter Hotel/Bar/Restaurant</fullName>
                </value>
                <value>
                    <fullName>NCO RTD ON</fullName>
                </value>
                <value>
                    <fullName>NCO MOT</fullName>
                </value>
                <value>
                    <fullName>NCO TOT</fullName>
                </value>
                <value>
                    <fullName>NCO Bulk Purchase</fullName>
                </value>
                <value>
                    <fullName>NCO E-Commerce</fullName>
                </value>
                <value>
                    <fullName>NCO RTD OFF</fullName>
                </value>
                <value>
                    <fullName>Promoter Costs</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Outlet Promotion</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Promotion</fullName>
                </value>
                <value>
                    <fullName>Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Gift/Sponsor/Reward Trip</fullName>
                </value>
                <value>
                    <fullName>WS/Outlet Rest. Entertainment</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
                <value>
                    <fullName>Market Visit</fullName>
                </value>
                <value>
                    <fullName>VAT Deemed Sales</fullName>
                </value>
                <value>
                    <fullName>POP - Warehouse &amp; Delivery (only for HQ/MM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SuggestedAmount_And_TargetVolume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suggested Amount and Target Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Validate_TotalSuggestedAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Total Suggested Amount</label>
        <type>Checkbox</type>
    </fields>
    <label>Special Promotion Type Setting</label>
    <listViews>
        <fullName>ASI_CN_CRM_Promotion_Type_Setting</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion_Type__c</columns>
        <columns>ASI_CRM_Override_BC_Rate__c</columns>
        <columns>ASI_CRM_Bypass_Contract_Upload_Checking__c</columns>
        <columns>ASI_CRM_Add_RBA_As_Final_Approver_V0_0__c</columns>
        <columns>ASI_CRM_Count_Cover_Outlet_as_CO__c</columns>
        <columns>ASI_CRM_Promotion_Type_Chinese_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CN CRM Promotion Type Setting</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion_Type__c</columns>
        <columns>ASI_CRM_Promotion_Type_Chinese_Name__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <columns>ASI_CRM_Override_BC_Rate__c</columns>
        <columns>ASI_CRM_Bypass_Contract_Upload_Checking__c</columns>
        <columns>ASI_CRM_Add_RBA_As_Final_Approver_V0_0__c</columns>
        <columns>ASI_CRM_Count_Cover_Outlet_as_CO__c</columns>
        <columns>ASI_CRM_New_FY_Promotion_Type__c</columns>
        <columns>ASI_CRM_SuggestedAmount_And_TargetVolume__c</columns>
        <columns>ASI_CRM_Validate_TotalSuggestedAmount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPT-{00000}</displayFormat>
        <label>Special Promotion Type Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Promotion Type Setting</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_SpecialPromotionTypeSetting</fullName>
        <active>true</active>
        <label>CN Special Promotion Type Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>